<resources>
    <string name="app_name">ChidiyaUdd</string>
    <string name="app_name_main">Chidiya\nUdd</string>

    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="four_player">Four Player</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="time_in_seconds">Time (in seconds)</string>
    <string name="select_the_mode">Select the mode</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="interstitial_full_screen"> ca-app-pub-8403244200318567/1945813136</string>
</resources>
