<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/settings_back"
    tools:context="com.singh.daman.chidiyaudd.ui.TwoPlayerSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/name_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_1"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/color1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cb_color="#283593"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/name_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_2"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/color2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cb_color="#d50000"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/name_player3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_3"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/color3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cb_color="#d50000"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/name_player4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_4"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/color4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cb_color="#d50000"
            app:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_in_seconds"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/set_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_the_mode"
            android:focusable="false"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_play"
        android:text="@string/play"
        style="@style/MainButtons" />


</LinearLayout>
